# test.uploads

./: .gitignore  .skato1.swp  CMakeLists.txt  mydata.txt  package.xml  skato1  skato2
simple_communication/: CMakeLists.txt  package.xml
simple_communication/src/: manipulator.cpp  streamer.cpp
src/: listener.cpp  talker.cpp
