<?xml version="1.0"?>
<package>
  <name>simple_communication</name>
  <version>1.0.0</version>
  <description>simple_communication package</description>
  <maintainer email="driverbulba@gmail.com">nick</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
